# CPAAS

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_foundation.py  0002_inbox.py  0003_ai_knowledge.py  0004_audit_and_indexes.py  0005_force_rls.py  0006_fix_rls_null_context.py
backend/src/: celery_app.py  main.py  worker_server.py
backend/src/core/: cache.py  config.py  crypto.py  database.py  events.py  exceptions.py  logging.py  middleware.py  models.py  ratelimit.py  redis.py  security.py  sentry.py  telemetry.py  validation.py  websocket.py
backend/src/modules/ai/: context.py  guardrails.py  model_provider.py  models.py  router.py  schemas.py  service.py  tools.py
backend/src/modules/ai/agents/: escalation.py  handoffs.py  router.py  support.py
backend/src/modules/audit/: models.py  router.py  service.py
backend/src/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/modules/channels/: base.py  email.py  models.py  router.py  schemas.py  service.py  webchat.py  whatsapp.py
backend/src/modules/contacts/: models.py  schemas.py  service.py
backend/src/modules/inbox/: models.py  router.py  schemas.py  service.py
backend/src/modules/knowledge/: chunker.py  embeddings.py  models.py  router.py  schemas.py  service.py
backend/src/workers/: ai_executor.py  db.py  document_processor.py  email_sync.py  message_processor.py  retry_handler.py  webhook_processor.py
docs/: channel-setup-guide.md  deployment.md  email-channel-guide.md  email-setup-guide.md  production-checklist.md  webchat-setup-guide.md  (+2 more)
(+82 files in other folders)
